Seach reubric fix code